--- a/EPDTAD_3.2/resources/lang/en.json
+++ b/EPDTAD_3.2/resources/lang/en.json
@@ -30,7 +30,8 @@
     "Buscar":"Search",
     "Buscar productos":"Search products",
     "Términos y condiciones": "Terms and Conditions",
-    "Ayuda":"Help"
+    "Ayuda":"Help",
+    "Añadir al carrito": "Add to cart"
 
 
 }
