Cambio idioma Funcionando

--- a/EPDTAD_3.2/resources/lang/en.json
+++ b/EPDTAD_3.2/resources/lang/en.json
@@ -31,7 +31,8 @@
     "Buscar productos":"Search products",
     "Términos y condiciones": "Terms and Conditions",
     "Ayuda":"Help",
-    "Añadir al carrito": "Add to cart"
+    "Añadir al carrito": "Add to cart",
+    "Idioma": "Language"
 
 
 }
