--- a/EPDTAD_3.2/resources/lang/es.json
+++ b/EPDTAD_3.2/resources/lang/es.json
@@ -66,6 +66,9 @@
    "Sign Up":  "Regístrate",
     "Create New Account": "Crear Nueva Cuenta",
     "Already have an account?": "¿Ya tiene una cuenta?",
-    "Sign In": "Iniciar sesión"
+    "Sign In": "Iniciar sesión",
+    "Spanish":"Español",
+    "English":"Inglés",
+    "Language":"Idioma"
 
 }
