--- a/EPDTAD_3.2/resources/lang/en.json
+++ b/EPDTAD_3.2/resources/lang/en.json
@@ -48,7 +48,9 @@
     "Cerrar sesión": "Log out",
     "Mis pedidos": "My orders",
     "Mis datos": "My data",
-    "Mis direcciones": "My addresses"
+    "Mis direcciones": "My addresses",
+    "Precio/Unidad" :"Price/Unit",
+    "unidades" : "units"
 
 
 
