--- a/EPDTAD_3.2/resources/lang/es.json
+++ b/EPDTAD_3.2/resources/lang/es.json
@@ -63,12 +63,12 @@
     "Dont have an account? ": "¿No tiene una cuenta?",
     "Already have an account? Login": "¿Ya tiene una cuenta? Inicie sesión",
     "E-Mail": "Correo",
-   "Sign Up":  "Regístrate",
+    "Sign Up": "Regístrate",
     "Create New Account": "Crear Nueva Cuenta",
     "Already have an account?": "¿Ya tiene una cuenta?",
     "Sign In": "Iniciar sesión",
-    "Spanish":"Español",
-    "English":"Inglés",
-    "Language":"Idioma"
-
+    "Spanish": "Español",
+    "English": "Inglés",
+    "Language": "Idioma",
+    "All rights Reserved": "Todos los Derechos Reservados"
 }
