traducciones y select de direccion
Hay que mirar si añadae bien la direccion al pedido, creo que no funciona correctamente

--- a/EPDTAD_3.2/resources/lang/en.json
+++ b/EPDTAD_3.2/resources/lang/en.json
@@ -50,7 +50,11 @@
     "Mis datos": "My data",
     "Mis direcciones": "My addresses",
     "Precio/Unidad" :"Price/Unit",
-    "unidades" : "units"
+    "unidades" : "units",
+    "No hay productos en el carrito": "There are no products in the cart",
+    "No hay productos en la lista de deseos": "There are no products in the wish list",
+    "Selecciona una dirección de envío": "Select a shipping address"
+
 
 
 
