--- a/EPDTAD_3.2/resources/lang/es.json
+++ b/EPDTAD_3.2/resources/lang/es.json
@@ -70,5 +70,6 @@
     "Spanish": "Español",
     "English": "Inglés",
     "Language": "Idioma",
-    "All rights Reserved": "Todos los Derechos Reservados"
+    "All rights Reserved": "Todos los Derechos Reservados",
+    "Checkout":"Pagar"
 }
