añadida pagina 404 y traduccciones

--- a/EPDTAD_3.2/resources/lang/es.json
+++ b/EPDTAD_3.2/resources/lang/es.json
@@ -71,5 +71,7 @@
     "English": "Inglés",
     "Language": "Idioma",
     "All rights Reserved": "Todos los Derechos Reservados",
-    "Checkout":"Pagar"
+    "Checkout":"Pagar",
+    "Oops! Something is wrong.": "Uups! Algo ha fallado.",
+    "Go Back":"Volver"
 }
