--- a/EPDTAD_3.2/resources/lang/en.json
+++ b/EPDTAD_3.2/resources/lang/en.json
@@ -53,7 +53,11 @@
     "unidades" : "units",
     "No hay productos en el carrito": "There are no products in the cart",
     "No hay productos en la lista de deseos": "There are no products in the wish list",
-    "Selecciona una dirección de envío": "Select a shipping address"
+    "Selecciona una dirección de envío": "Select a shipping address",
+    "Registro": "Register",
+    "Inicio": "Home",
+    "Categoría": "Category",
+    "Teléfono": "Phone Number"
 
 
 
