--- a/EPDTAD_3.2/resources/lang/en.json
+++ b/EPDTAD_3.2/resources/lang/en.json
@@ -57,7 +57,8 @@
     "Registro": "Register",
     "Inicio": "Home",
     "Categoría": "Category",
-    "Teléfono": "Phone Number"
+    "Teléfono": "Phone Number",
+    "Añadir dirección": "Add address"
 
 
 
