--- a/EPDTAD_3.2/resources/lang/es.json
+++ b/EPDTAD_3.2/resources/lang/es.json
@@ -73,5 +73,7 @@
     "All rights Reserved": "Todos los Derechos Reservados",
     "Checkout":"Pagar",
     "Oops! Something is wrong.": "Uups! Algo ha fallado.",
-    "Go Back":"Volver"
+    "Go Back":"Volver",
+    "Email": "Email",
+    "Shipping addresses": "Direcciones de envío"
 }
