--- a/EPDTAD_3.2/resources/lang/en.json
+++ b/EPDTAD_3.2/resources/lang/en.json
@@ -63,5 +63,6 @@
     "País": "Country",
     "Direcciones de envío": "Shipping addresses",
     "Dirección": "Address",
-    "España": "Spain"
+    "España": "Spain",
+    "Crear Favorito": "Create Favorite"
 }
