Se eliminan locales y añade el cambiar contraseña a perfil
Sigue sin funcionar al hacer login, da el siguiente error:setlocale(): Argument #1 ($category) must be of type int, Illuminate\Http\Request given

--- a/EPDTAD_3.2/resources/lang/en.json
+++ b/EPDTAD_3.2/resources/lang/en.json
@@ -64,5 +64,6 @@
     "Direcciones de envío": "Shipping addresses",
     "Dirección": "Address",
     "España": "Spain",
-    "Crear Favorito": "Create Favorite"
+    "Crear Favorito": "Create Favorite",
+    "Cambiar contraseña": "Change password"
 }
